<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/phonetabview_bg"
            android:paddingTop="4dip" >

            <LinearLayout
                android:id="@+id/channel1"
                style="@style/main_tab_but_linear" >

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/main_channel_btn_img_style"
                    android:src="@drawable/icon_1_c" />

                <TextView  android:id="@+id/textView1"
                    style="@style/main_channel_text_style"
                    android:text="@string/category_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/channel2"
                style="@style/main_tab_but_linear" >

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/main_channel_btn_img_style"
                    android:src="@drawable/icon_2_n" />

                <TextView
                    android:id="@+id/textView2"
					style="@style/main_channel_text_style"
                    android:text="@string/category_channel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/channel3"
                style="@style/main_tab_but_linear" >

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/main_channel_btn_img_style"
                    android:src="@drawable/icon_3_n" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/main_channel_text_style"
                    android:text="@string/category_search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/channel4"
                style="@style/main_tab_but_linear" >

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/main_channel_btn_img_style"
                    android:src="@drawable/icon_4_n" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/main_channel_text_style"
                    android:text="@string/category_account" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/channel5"
                style="@style/main_tab_but_linear">

                <ImageView
                    android:id="@+id/imageView5"
                    style="@style/main_channel_btn_img_style"
                    android:src="@drawable/icon_5_n" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/main_channel_text_style"
                    android:text="@string/category_more" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</TabHost>